post git part 1

--- a/_posts/2022-09-26-git.md
+++ b/_posts/2022-09-26-git.md
@@ -27,6 +27,51 @@ $ git config --global color.ui auto
 ```
 Active la colorisation de la sortie en ligne de commande
 
+### Créer des dépôts
+**Démarrer un nouveau dépôt ou en obtenir un depuis une URL existante**
+
+```bash
+$ git init [nom-du-projet]
+``` 
+Crée un dépôt local à partir du nom spécifié
+
+```bash
+$ git clone [url]
+```
+Télécharge un projet et tout son historique de versions
+
+### Effectuer des changements
+
+```bash
+$ git status
+```
+Liste tous les nouveaux fichiers et les fichiers modifiés à commiter
+
+```bash
+$ git diff 
+```
+Montre les modifications de fichier qui ne sont pas encore indexées
+
+```bash
+$ git add [fichier]
+``` 
+Ajoute un instantané du fichier, en préparation pour le suivi de version
+
+```bash
+$ git diff --staged
+``` 
+Montre les différences de fichier entre la version indexée et la dernière version
+
+```bash
+$ git reset [fichier] 
+```
+Enleve le fichier de l'index, mais conserve son contenu
+
+```bash
+$ git commit -m "[message descriptif]" 
+```
+Enregistre des instantanés de fichiers de façon permanente dans l'historique des versions
+
 ### Grouper des changements
 
 **Nommer une série de commits et combiner les résultats de travaux terminés**
