git post part 2

--- a/_posts/2022-09-26-git.md
+++ b/_posts/2022-09-26-git.md
@@ -159,3 +159,90 @@ Liste toutes les remises
 $ git stash drop 
 ```
 Supprime la remise la plus récente
+
+### Enregistrer des fragments
+
+**Mettre en suspens des modifications non finies pour y revenir plus tard**
+
+```bash
+$ git stash
+``` 
+Enregistre de manière temporaire tous les fichiers sous suivi de version qui ont été modifiés ("remiser son travail")
+
+```bash
+$ git stash pop 
+```
+Applique une remise et la supprime immédiatement
+
+```bash
+$ git stash list 
+```
+Liste toutes les remises
+
+```bash
+$ git stash drop 
+```
+Supprime la remise la plus récente
+
+
+### Vérifier l'historique des versions
+
+**Suivre et inspecter l'évolution des fichiers du projet**
+
+```bash
+$ git log 
+```
+Montre l'historique des versions pour la branche courante
+
+```bash
+$ git log --follow [fichier]
+``` 
+Montre l'historique des versions, y compris les actions de renom- mage, pour le fichier spécifié
+
+```bash
+$ git diff [premiere-branche]...[deuxieme-branche] 
+```
+Montre les différences de contenu entre deux branches
+
+```bash
+$ git show [commit] 
+```
+Montre les modifications de métadonnées et de contenu inclues dans le commit spécifié
+
+### Refaire des commits
+
+**Corriger des erreurs et gérer l'historique des corrections**
+
+```bash
+$ git reset [commit] 
+```
+Annule tous les commits après [commit], en conservant les modifications localement
+
+```bash
+$ git reset --hard [commit] 
+```
+Supprime tout l'historique et les modifications effectuées après le commit spécifié
+
+### Synchroniser les changements
+
+**Référencer un dépôt distant et synchroniser l'historique de versions**
+
+```bash
+$ git fetch [nom-de-depot]
+``` 
+Récupère tout l'historique du dépôt nommé
+
+```bash
+$ git merge [nom-de-depot]/[branche] 
+```
+Fusionne la branche du dépôt dans la branche locale courante
+
+```bash
+$ git push [alias] [branche] 
+```
+Envoie tous les commits de la branche locale vers GitHub
+
+```bash
+$ git pull 
+```
+Récupère tout l'historique du dépôt nommé et incorpore les modification
