relecture partie Grid

--- a/_posts/2023-02-19-css.md
+++ b/_posts/2023-02-19-css.md
@@ -9,13 +9,15 @@ tags:   CSS
 Chaque année, de nouvelles features CSS sont ajoutées dans le but d'améliorer la conception et la fonctionnalité des sites web. Dans cet article, je vais vous présenter cinq des principales nouveautés CSS de 2021 et 2022 à savoir : Grid CSS et plus particulièrement SubGrid et Gap, les Container Queries, les Cascade Layers, les Style Queries et pour terminer la pseudo-class `:has`
 
 
-## CSS Grid
+## Grid
 
-CSS Grid est une méthode de mise en page qui permet de créer des grilles de colonnes et de rangées pour disposer les éléments HTML. Les grilles CSS ont été introduites dans CSS3 et ont été améliorées au fil du temps. En 2021 et 2022, deux nouvelles fonctionnalités ont été ajoutées à CSS Grid pour améliorer encore la mise en page des éléments HTML : subgrid et gap.
+Grid est une méthode de mise en page permettant de créer des grilles de lignes et de colonnes afin de disposer les éléments HTML. Introduite avec CSS3, Grid ne cesse s'améliorer régulièment avec par exemple l'ajout en 2021 et 2022 de deux nouvelles fonctionnalités `subgrid` et `gap`.
 
 ### Subgrid
 
-Subgrid est une fonctionnalité de CSS Grid qui permet aux éléments de la grille imbriquée d'hériter automatiquement de la définition de la grille parente. Autrement dit, elle permet aux grilles imbriquées de suivre la même configuration de grille que la grille parente sans avoir à la redéfinir à chaque fois.
+Lorsque l'on utilise `display: grid` au sien d'un conteneur, seuls ses descendants directs peuvent devenir des éléments de la grille et peuvent y être placés. Les enfants de ces descendants sont placés quant à eux selon le flux habituel.
+
+Grâce à `subgrid`, les éléments de la grille imbriquée héritent automatiquement de la définition de la grille parente. Autrement dit, elle permet aux grilles imbriquées de suivre la même configuration de grille que la grille parente sans avoir à la redéfinir à chaque fois.
 Par exemple, supposons que nous avons une grille parente qui définit une disposition de grille à deux colonnes :
 
 ```css
@@ -25,7 +27,7 @@ Par exemple, supposons que nous avons une grille parente qui définit une dispos
 }
 ```
 
-Si nous avons une grille imbriquée dans la première colonne de la grille parente, nous pouvons utiliser la fonctionnalité subgrid pour faire en sorte que cette grille hérite automatiquement de la même disposition de grille que la grille parente :
+Si nous avons une grille imbriquée dans la première colonne de la grille parente, nous pouvons utiliser la fonctionnalité `subgrid` pour faire en sorte que cette grille hérite automatiquement de la même disposition de grille que la grille parente :
 
 ```css
 .container {
@@ -35,16 +37,16 @@ Si nous avons une grille imbriquée dans la première colonne de la grille paren
 
 .child {
   display: grid;
-  grid-template-rows: subgrid;
+  grid-template-columns: subgrid;
 }
 ```
 
-Dans cet exemple, la grille imbriquée avec la classe « child » hérite automatiquement de la définition de colonne de la grille parente. Ainsi, si la grille parente est modifiée, la grille imbriquée suivra automatiquement cette modification.
+Dans cet exemple, la grille imbriquée avec la classe `child` hérite automatiquement de la définition de colonne de la grille parente. Ainsi, si la grille parente est modifiée, la grille imbriquée suivra automatiquement cette modification.
 
 ### Gap
 
-La fonctionnalité gap est une propriété de grille qui permet de définir l'espace entre les rangées et les colonnes d'une grille. Cette fonctionnalité est utile pour créer des mises en page de grille plus aérées et plus lisibles.
-Par exemple, pour créer une grille avec un espace de 20 pixels entre chaque rangée et colonne, on peut utiliser la propriété gap :
+La fonctionnalité gap permet de définir l'espace entre les lignes et les colonnes d'une grille. Cette dernière est utile pour créer des mises en page de grille plus aérées et plus lisibles.
+Par exemple, pour créer une grille avec un espace de 20 pixels entre chaque ligne et colonne, on peut utiliser la propriété gap :
 
 ```css
 .container {
@@ -56,7 +58,7 @@ Par exemple, pour créer une grille avec un espace de 20 pixels entre chaque ran
 
 Dans cet exemple, l'espace entre chaque colonne et chaque rangée est défini à 20 pixels.
 
-Pour conclure sur cette premère partie, les fonctionnalités subgrid et gap de CSS Grid améliorent considérablement la flexibilité et la fonctionnalité de la mise en page des éléments HTML.
+Pour conclure sur cette premère partie, les fonctionnalités `subgrid` et `gap` de Grid améliorent la flexibilité et la fonctionnalité de la mise en page des éléments HTML.
 
 ## Les Container Queries
 
