relecture partie container queries

--- a/_posts/2023-02-19-css.md
+++ b/_posts/2023-02-19-css.md
@@ -62,16 +62,17 @@ Pour conclure sur cette premère partie, les fonctionnalités `subgrid` et `gap`
 
 ## Les Container Queries
 
-Les Container Queries sont une fonctionnalité CSS en cours de développement qui permettent d'appliquer des styles en fonction des dimensions de leur conteneur plutôt que de la fenêtre du navigateur. Cette fonctionnalité est très attendue car elle permettra de créer des mises en page plus flexibles et réactives, et de mieux gérer les éléments HTML sur des tailles d'écran variables.
+Les Container Queries permettent d'appliquer des styles en fonction des dimensions de leur conteneur plutôt que de la fenêtre du navigateur. Cette fonctionnalité était très attendue car elle permet de créer des mises en page plus flexibles et réactives, et de mieux gérer les éléments HTML sur des tailles d'écran variables.
 
 ### Pourquoi avons-nous besoin des Container Queries?
 
-Les requêtes @media sont actuellement la méthode la plus courante pour créer des styles adaptatifs en fonction des tailles d'écran. Cependant, les requêtes médias sont basées sur les dimensions de la fenêtre du navigateur et non sur les dimensions des conteneurs des éléments HTML. Cela peut poser des problèmes lorsqu'un élément HTML est placé dans un conteneur de taille fixe qui ne correspond pas à la taille de la fenêtre du navigateur.
-Par exemple, si nous avons un élément HTML avec un fond bleu et une largeur de 50%, et qu'il est placé dans un conteneur de largeur fixe de 300px, l'élément ne sera pas réactif et sera coupé si la taille de la fenêtre du navigateur est inférieure à 600px (300px du conteneur x 50% de l'élément). C'est là qu'interviennent les Container Queries, qui permettent d'appliquer des styles en fonction de la taille du conteneur et non de la taille de la fenêtre.
+`@media` est actuellement la méthode la plus courante pour créer des styles adaptatifs en fonction des tailles d'écran. Cependant, les requêtes `@media` sont basées sur les dimensions de la fenêtre du navigateur et non sur les dimensions des conteneurs des éléments HTML. Cela peut poser des problèmes lorsqu'un élément HTML est placé dans un conteneur de taille fixe qui ne correspond pas à la taille de la fenêtre du navigateur.
+
+Par exemple, si nous avons un élément HTML avec un fond bleu et une largeur de 50%, et qu'il est placé dans un conteneur de largeur fixe de 300px, l'élément ne sera pas réactif et sera coupé si la taille de la fenêtre du navigateur est inférieure à 600px (300px du conteneur x 50% de l'élément). C'est là qu'interviennent les Container Queries, permettant d'appliquer des styles en fonction de la taille du conteneur et non de la taille de la fenêtre.
 
 ### Comment utiliser les Container Queries?
 
-Pour utiliser les Container Queries, nous devons d'abord définir une nouvelle règle appelée « container ». Cette règle sera utilisée pour définir les styles en fonction de la taille du conteneur.
+Pour utiliser les Container Queries, nous devons d'abord définir une nouvelle règle appelée `container`. Cette règle sera utilisée pour définir les styles en fonction de la taille du conteneur.
 
 ```css
 @container (min-width: 300px) and (max-width: 600px) {
@@ -82,10 +83,10 @@ Pour utiliser les Container Queries, nous devons d'abord définir une nouvelle r
 }
 ```
 
-Dans cet exemple, la règle container s'applique lorsque la largeur du conteneur est comprise entre 300 et 600 pixels. Dans la règle container, nous avons défini que l'élément avec la classe « container » doit avoir un affichage flexible et une direction de colonne lorsque la largeur du conteneur est comprise entre ces deux valeurs.
+Dans cet exemple, la règle `container` s'applique lorsque la largeur du conteneur est comprise entre 300 et 600 pixels. Dans cette règle, nous avons défini que l'élément avec la classe `container` doit avoir un affichage flexible et que les éléments qu'il contient doivent s'afficher en colonne lorsque la largeur du conteneur est comprise entre ces deux valeurs.
 
 ### Exemples d'utilisation des Container Queries
-Voici quelques exemples d'utilisation des Container Queries pour créer des mises en page plus flexibles et réactives :
+Voici quelques exemples d'utilisation des Container Queries :
 
 - Changer la disposition des éléments en fonction de la largeur du conteneur :
 
@@ -105,7 +106,7 @@ Voici quelques exemples d'utilisation des Container Queries pour créer des mise
 }
 ```
 
-Dans cet exemple, la disposition des éléments est définie en fonction de la largeur du conteneur. Lorsque la largeur est comprise entre 300px et 799px, les éléments sont disposés en ligne. Lorsque la largeur est supérieure à 800px, les éléments sont disposés en grille à trois colonnes.
+Dans cet exemple, la disposition des éléments est définie en fonction de la largeur du conteneur. Lorsque la largeur est comprise entre 300px et 799px, les éléments sont disposés en ligne. Lorsque la largeur est supérieure à 800px, les éléments sont disposés en grille de trois colonnes.
 
 - Changer la taille de la police en fonction de la largeur du conteneur :
 
@@ -143,7 +144,7 @@ Dans cet exemple, la taille de la police est définie en fonction de la largeur 
 
 Dans cet exemple, la couleur du texte est définie en fonction de la hauteur du conteneur. Lorsque la hauteur est comprise entre 500px et 799px, la couleur du texte est rouge. Lorsque la hauteur est supérieure à 800px, la couleur du texte est bleue.
 
-Pour conclure cette seconde partie, les Container Queries sont une fonctionnalité CSS très attendue car elles permettront de créer des mises en page plus flexibles et réactives en fonction de la taille des conteneurs des éléments HTML. Bien que cette fonctionnalité ne soit pas encore largement prise en charge par les navigateurs, elle est en cours de développement et pourrait devenir une méthode plus efficace pour créer des mises en page adaptatives dans un avenir proche.
+Pour conclure cette seconde partie, bien que cette fonctionnalité ne soit pas encore largement prise en charge par les navigateurs, elle pourrait devenir à terme une méthode plus efficace pour créer des mises en page adaptatives.
 
 ## Les Cascade Layers
 
