--- a/_posts/2023-02-19-css.md
+++ b/_posts/2023-02-19-css.md
@@ -70,8 +70,6 @@ Les Container Queries permettent d'appliquer des styles en fonction des dimensio
 
 Par exemple, si nous avons un élément HTML avec un fond bleu et une largeur de 50%, et qu'il est placé dans un conteneur de largeur fixe de 300px, l'élément ne sera pas réactif et sera coupé si la taille de la fenêtre du navigateur est inférieure à 600px (300px du conteneur x 50% de l'élément). C'est là qu'interviennent les Container Queries, permettant d'appliquer des styles en fonction de la taille du conteneur et non de la taille de la fenêtre.
 
-### Comment utiliser les Container Queries?
-
 Pour utiliser les Container Queries, nous devons d'abord définir une nouvelle règle appelée `container`. Cette règle sera utilisée pour définir les styles en fonction de la taille du conteneur.
 
 ```css
@@ -88,7 +86,7 @@ Dans cet exemple, la règle `container` s'applique lorsque la largeur du contene
 ### Exemples d'utilisation des Container Queries
 Voici quelques exemples d'utilisation des Container Queries :
 
-- Changer la disposition des éléments en fonction de la largeur du conteneur :
+a. Changer la disposition des éléments en fonction de la largeur du conteneur :
 
 ```css
 @container (min-width: 300px) {
@@ -108,7 +106,7 @@ Voici quelques exemples d'utilisation des Container Queries :
 
 Dans cet exemple, la disposition des éléments est définie en fonction de la largeur du conteneur. Lorsque la largeur est comprise entre 300px et 799px, les éléments sont disposés en ligne. Lorsque la largeur est supérieure à 800px, les éléments sont disposés en grille de trois colonnes.
 
-- Changer la taille de la police en fonction de la largeur du conteneur :
+b. Changer la taille de la police en fonction de la largeur du conteneur :
 
 ```css
 @container (min-width: 500px) {
@@ -144,22 +142,18 @@ Dans cet exemple, la taille de la police est définie en fonction de la largeur 
 
 Dans cet exemple, la couleur du texte est définie en fonction de la hauteur du conteneur. Lorsque la hauteur est comprise entre 500px et 799px, la couleur du texte est rouge. Lorsque la hauteur est supérieure à 800px, la couleur du texte est bleue.
 
-Pour conclure cette seconde partie, bien que cette fonctionnalité ne soit pas encore largement prise en charge par les navigateurs, elle pourrait devenir à terme une méthode plus efficace pour créer des mises en page adaptatives.
 
 ## Les Cascade Layers
 
-Les Cascade Layers, ou couches de cascade en français, sont une nouvelle fonctionnalité CSS qui permettent de définir un ordre de priorité pour les styles appliqués à un élément HTML. Cette fonctionnalité est encore en développement, mais elle a le potentiel de rendre la gestion de la cascade CSS plus flexible et plus efficace. Dans cet article, nous allons explorer comment les Cascade Layers fonctionnent et donner des exemples de leur utilisation.
-
-### Comment fonctionnent les Cascade Layers
 La Cascade CSS est le mécanisme par lequel les styles appliqués à un élément HTML sont déterminés en fonction de leur spécificité, de leur ordre d'apparition et de leur importance. Les Cascade Layers permettent de définir un ordre de priorité pour les styles en créant des couches de cascade. Chaque couche peut contenir des styles spécifiques qui ont une priorité plus élevée que les styles des couches inférieures.
 
 
-Les Cascade Layers sont définies en utilisant l'at-rule @layer, qui peut être placé dans n'importe quel fichier CSS. Les styles dans la couche par défaut ont une priorité inférieure à celle de toutes les autres couches.
+Les Cascade Layers sont définies en utilisant l'at-rule `@layer`, qui peut être placé dans n'importe quel fichier CSS. Les styles dans la couche par défaut ont une priorité inférieure à celle de toutes les autres couches.
 
 ### Exemples d'utilisation des Cascade Layers
 a. Surcharge de styles dans une bibliothèque de composants
 
-Lors de l'utilisation d'une bibliothèque de composants, il est courant de vouloir personnaliser les styles des composants pour répondre aux besoins de conception de votre application. Cependant, cela peut être difficile si les styles de la bibliothèque ont une spécificité plus élevée que les vôtres. Avec les Cascade Layers, vous pouvez définir une couche de personnalisation qui aura une priorité plus élevée que les styles de la bibliothèque. Voici un exemple :
+Lors de l'utilisation d'une bibliothèque de composants, il est courant de vouloir personnaliser les styles des composants pour répondre aux besoins de conception de l'application. Cependant, cela peut être difficile si les styles de la bibliothèque ont une spécificité plus élevée que les nôtres. Avec les Cascade Layers, il est possible de définir une couche de personnalisation qui aura une priorité plus élevée que les styles de la bibliothèque. Voici un exemple :
 
 ```css
 @layer components {
@@ -175,7 +169,7 @@ Lors de l'utilisation d'une bibliothèque de composants, il est courant de voulo
 }
 ```
 
-Dans cet exemple, nous avons défini deux couches de cascade : la couche "components" contient les styles de la bibliothèque de composants, tandis que la couche "customization" contient les styles de personnalisation. Comme la couche "customization" a une priorité plus élevée, les styles qu'elle contient surchargent les styles de la couche "components".
+Dans cet exemple, nous avons défini deux couches de cascade : la couche `components` contient les styles de la bibliothèque de composants, tandis que la couche "customization" contient les styles de personnalisation. Comme la couche `customization` a une priorité plus élevée, les styles qu'elle contient surchargent les styles de la couche `components`.
 
 b. Définition de styles pour différentes parties d'un composant
 Lors de la création d'un composant complexe, il peut être difficile de définir des styles pour toutes les parties de celui-ci en gardant à l'esprit la cascade CSS. Les Cascade Layers peuvent simplifier cette tâche en permettant de définir des styles pour des parties spécifiques du composant. Voici un exemple :
@@ -199,7 +193,7 @@ Lors de la création d'un composant complexe, il peut être difficile de défini
 }
 ```
 
-Dans cet exemple, nous avons défini deux couches de cascade : la couche "base" contient les styles de base pour le composant "card", tandis que la couche "components" a une priorité plus élevée que la couche "base", les styles qu'elle contient seront appliqués aux parties spécifiques du composant, tandis que les styles de la couche "base" seront appliqués à tout le composant.
+Dans cet exemple, nous avons défini deux couches de cascade : la couche `base` contient les styles de base pour le composant `card`, tandis que la couche `components` a une priorité plus élevée que la couche `base`, les styles qu'elle contient seront appliqués aux parties spécifiques du composant, tandis que les styles de la couche `base` seront appliqués à tout le composant.
 
 c. Organisation de styles pour différents environnements
 Lorsque vous créez une application qui sera utilisée dans différents environnements, tels que le développement, la production et la pré-production, il peut être utile de définir des styles spécifiques pour chaque environnement. Les Cascade Layers peuvent vous aider à organiser vos styles pour chaque environnement. Voici un exemple :
@@ -218,15 +212,13 @@ Lorsque vous créez une application qui sera utilisée dans différents environn
 }
 ```
 
-Dans cet exemple, nous avons défini deux couches de cascade : la couche "development" contient des styles de débogage qui ne doivent être utilisés que dans l'environnement de développement, tandis que la couche "production" contient des styles qui doivent être utilisés dans l'environnement de production. Comme la couche "development" a une priorité plus élevée que la couche "production", les styles de débogage ne seront appliqués que dans l'environnement de développement.
+Dans cet exemple, nous avons défini deux couches de cascade : la couche `development` contient des styles de débogage qui ne doivent être utilisés que dans l'environnement de développement, tandis que la couche `production` contient des styles qui doivent être utilisés dans l'environnement de production. Comme la couche `development` a une priorité plus élevée que la couche `production`, les styles de débogage ne seront appliqués que dans l'environnement de développement.
 
-En conclusion, les Cascade Layers sont une fonctionnalité CSS prometteuse qui permet de gérer les styles de manière plus flexible et plus efficace. Bien que cette fonctionnalité soit encore en développement, elle est déjà prise en charge par certains navigateurs et peut être utilisée dès maintenant pour améliorer la gestion de la cascade CSS. Les exemples donnés montrent comment les Cascade Layers peuvent être utilisées pour organiser les styles d'une application en fonction des besoins de conception et des environnements.
+En conclusion, les exemples donnés montrent comment les Cascade Layers peuvent être utilisées pour organiser les styles d'une application en fonction des besoins de conception et des environnements.
 
 ## Les Style Queries
-Les Style Queries sont une fonctionnalité expérimentale CSS qui permet aux développeurs de définir des styles en fonction des caractéristiques de l'environnement d'affichage, telles que la largeur de l'écran ou l'orientation du dispositif. Les Style Queries sont une approche alternative aux Media Queries, qui sont basées sur les caractéristiques du dispositif plutôt que sur l'environnement d'affichage. Dans cet article, nous allons examiner comment les Style Queries fonctionnent et comment ils peuvent être utilisés pour améliorer la conception des sites web.
-
-### Introduction aux Style Queries
-Les Style Queries fonctionnent en ajoutant des conditions de style à une règle CSS. Ces conditions de style sont basées sur des propriétés CSS spécifiques, telles que la largeur de l'écran ou l'orientation du dispositif. Les Style Queries peuvent être utilisés pour définir des styles différents en fonction de l'environnement d'affichage, ce qui permet aux développeurs de créer des designs qui s'adaptent automatiquement à différents dispositifs et tailles d'écran.
+Les Style Queries permettent aux développeurs de définir des styles en fonction des caractéristiques de l'environnement d'affichage, telles que la largeur de l'écran ou l'orientation du device. Les Style Queries sont une approche alternative aux Media Queries, qui sont basées sur les caractéristiques du device plutôt que sur l'environnement d'affichage et fonctionnent en ajoutant des conditions de style à une règle CSS. Les Style Queries peuvent être appliqués directement aux éléments HTML, tandis que les Media Queries sont généralement appliqués aux feuilles de style.
+Ils sont plus expressifs que les Media Queries, car ils permettent de définir des conditions basées sur des propriétés CSS spécifiques, plutôt que sur des caractéristiques du device.
 
 ### Exemple d'utilisation des Style Queries
 Voici un exemple simple de la façon dont les Style Queries peuvent être utilisés pour définir des styles différents en fonction de la largeur de l'écran :
@@ -245,26 +237,14 @@ Voici un exemple simple de la façon dont les Style Queries peuvent être utilis
 
 Dans cet exemple, nous avons défini une règle CSS pour l'élément avec la classe "my-element". Les styles de base incluent un fond rouge, une couleur blanche et un rembourrage de 10 pixels. Nous avons ensuite ajouté une Style Query avec la condition "width >= 600px". Cette condition signifie que les styles définis à l'intérieur de la Style Query seront appliqués uniquement lorsque la largeur de l'écran est supérieure ou égale à 600 pixels. Dans ce cas, nous avons défini une couleur de fond bleue.
 
-### Avantages des Style Queries
-Les Style Queries offrent plusieurs avantages par rapport aux Media Queries, notamment :
-
-- Les Style Queries peuvent être appliqués directement aux éléments HTML, tandis que les Media Queries sont généralement appliqués aux feuilles de style.
-- Les Style Queries peuvent être utilisés pour définir des styles en fonction de l'environnement d'affichage, ce qui permet de créer des designs plus adaptables et réactifs.
-- Les Style Queries sont plus expressifs que les Media Queries, car ils permettent aux développeurs de définir des conditions basées sur des propriétés CSS spécifiques, plutôt que sur des caractéristiques du dispositif.
-
-
-### Limitations des Style Queries
-Il est important de noter que les Style Queries sont encore une fonctionnalité expérimentale et ne sont pas encore largement prises en charge par les navigateurs. De plus, les Style Queries peuvent rendre le code CSS plus complexe et difficile à maintenir, surtout si les développeurs utilisent des conditions de style multiples pour chaque élément HTML.
-
-En conclusion, les Style Queries sont une fonctionnalité CSS prometteuse qui permet de créer des designs plus adaptables et réactifs en fonction de l'environnement d'affichage. Bien que cette fonctionnalité soit encore en développement et ne soit pas encore largement prise en charge par les navigateurs, elle peut être utilisée dès maintenant pour améliorer la conception des interfaces web.
 
 ## La pseudo-class :has
 
-La pseudo-classe :has() est une fonctionnalité relativement récente en CSS qui permet aux développeurs de sélectionner les éléments HTML en fonction de leur relation avec un autre élément spécifique. Cette pseudo-classe est particulièrement utile pour sélectionner des éléments HTML qui sont imbriqués dans une structure de contenu complexe.
+La pseudo-class `:has()` est une fonctionnalité relativement récente en CSS qui permet de sélectionner les éléments HTML en fonction de leur relation avec un autre élément spécifique. Cette pseudo-class est particulièrement utile pour sélectionner des éléments HTML qui sont imbriqués dans une structure de contenu complexe.
 
-La pseudo-classe :has() est similaire à la pseudo-classe :not(), qui permet de sélectionner des éléments HTML qui ne correspondent pas à une expression donnée. Cependant, contrairement à :not(), la pseudo-classe :has() permet de sélectionner des éléments HTML qui correspondent à une expression donnée, mais qui ont un ou plusieurs enfants qui correspondent également à une expression donnée.
+La pseudo-class `:has()` est similaire à la pseudo-class `:not()`, qui permet de sélectionner des éléments HTML qui ne correspondent pas à une expression donnée. Cependant, contrairement à `:not()`, elle permet de sélectionner des éléments HTML qui correspondent à une expression donnée, mais qui ont un ou plusieurs enfants qui correspondent également à une expression donnée.
 
-Voici un exemple de code CSS utilisant la pseudo-classe :has() pour sélectionner tous les éléments `<li>` qui contiennent un élément `<a>` avec une classe "active" :
+Voici un exemple de code CSS utilisant `:has()` pour sélectionner tous les éléments `<li>` qui contiennent un élément `<a>` avec une classe "active" :
 
 ```css
 li:has(a.active) {
@@ -272,11 +252,9 @@ li:has(a.active) {
 }
 ```
 
-Dans cet exemple, la pseudo-classe :has() est utilisée pour sélectionner tous les éléments `<li>` qui contiennent un élément `<a>` avec une classe "active". Le sélecteur de style correspondant applique alors une propriété CSS de font-weight: bold; pour mettre en évidence les éléments sélectionnés.
+Dans cet exemple, `:has()` est utilisée pour sélectionner tous les éléments `<li>` qui contiennent un élément `<a>` avec une classe "active". Le sélecteur de style correspondant applique alors une propriété CSS de font-weight: bold; pour mettre en évidence les éléments sélectionnés.
 
-Il est important de noter que la pseudo-classe :has() est une fonctionnalité relativement nouvelle et n'est pas encore largement prise en charge par tous les navigateurs. Les développeurs doivent donc être prudents lorsqu'ils utilisent cette pseudo-classe dans leur code CSS et s'assurer qu'elle est prise en charge par les navigateurs qu'ils visent.
-
-En résumé, la pseudo-classe :has() est une fonctionnalité CSS utile pour sélectionner des éléments HTML en fonction de leur relation avec d'autres éléments. Cette fonctionnalité peut être particulièrement utile pour les structures de contenu complexes où les développeurs doivent sélectionner des éléments imbriqués. Les développeurs doivent cependant être conscients de la compatibilité des navigateurs lorsqu'ils utilisent cette pseudo-classe dans leur code CSS.
+En résumé, la pseudo-classe :has() est une fonctionnalité CSS utile pour sélectionner des éléments HTML en fonction de leur relation avec d'autres éléments. Cette fonctionnalité peut être particulièrement utile pour les structures de contenu complexes où les développeurs doivent sélectionner des éléments imbriqués.
 
  
 
