--- a/_posts/2024-07-24-collab.md
+++ b/_posts/2024-07-24-collab.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Publier sur NPM"
+title:  "La Collaboration efficace entre développeurs et designers"
 date:   2024-07-24 18:05:55 +0300
 image:  14.png
 tags:   Collab.
